# MgIA

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  MusicGenerator.sln  MusicGeneratorExecutable.vcxproj  MusicGeneratorExecutable.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.py  readme.txt  requirements.txt
